--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -66,7 +66,7 @@
     "extends": "react-app"
   },
   "scripts": {
-    "build": "react-scripts build",
+    "build": "react-scripts build --max-old-space-size=8192",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
     "test": "react-scripts test",
