--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -46,6 +46,8 @@
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.3.1",
+    "rimble-ui": "^0.14.0",
+    "styled-components": "^5.2.0",
     "web3modal": "^1.5.0"
   },
   "devDependencies": {
