--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^8.2.0",
     "eth-hooks": "^1.1.2",
     "graphql": "^14.6.0",
+    "openlaw": "^0.2.46",
     "qrcode.react": "^1.0.0",
     "react": "16.12.0",
     "react-blockies": "^1.4.1",
