--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -35,6 +35,7 @@
     "apollo-utilities": "^1.3.3",
     "axios": "^0.19.2",
     "bnc-notify": "^1.3.0",
+    "bootstrap": "^4.5.3",
     "burner-provider": "^1.0.38",
     "dotenv": "^8.2.0",
     "eth-hooks": "^1.1.2",
@@ -43,6 +44,7 @@
     "qrcode.react": "^1.0.0",
     "react": "16.12.0",
     "react-blockies": "^1.4.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "16.12.0",
     "react-hook-form": "^6.9.3",
     "react-qr-reader": "^2.2.1",
