--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@apollo/client": "^3.2.4",
     "@apollo/react-hooks": "^3.1.3",
     "@ethersproject/address": "^5.0.2",
     "@ethersproject/bignumber": "^5.0.5",
@@ -31,7 +32,7 @@
     "@walletconnect/web3-provider": "^1.0.0-beta.47",
     "antd": "^4.5.0",
     "apollo-boost": "^0.4.7",
-    "apollo-client": "^2.6.8",
+    "apollo-client": "^2.6.10",
     "apollo-utilities": "^1.3.3",
     "axios": "^0.19.2",
     "bnc-notify": "^1.3.0",
