--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -18,6 +18,7 @@
     "@ant-design/icons": "^4.2.2",
     "@apollo/client": "^3.2.4",
     "@apollo/react-hooks": "^3.1.3",
+    "@babel/runtime": "^7.12.1",
     "@ethersproject/address": "^5.0.2",
     "@ethersproject/bignumber": "^5.0.5",
     "@ethersproject/bytes": "^5.0.3",
@@ -28,9 +29,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@textile/hub": "^1.1.1",
     "@uniswap/sdk": "^3.0.1",
     "@walletconnect/web3-provider": "^1.0.0-beta.47",
     "antd": "^4.5.0",
+    "apexcharts": "^3.22.1",
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.10",
     "apollo-utilities": "^1.3.3",
@@ -42,16 +45,21 @@
     "dotenv": "^8.2.0",
     "eth-hooks": "^1.1.2",
     "graphql": "^14.6.0",
+    "moment": "^2.29.1",
     "qrcode.react": "^1.0.0",
-    "react": "16.12.0",
+    "react": "^16.14.0",
+    "react-apexcharts": "^1.3.7",
     "react-blockies": "^1.4.1",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "16.12.0",
+    "react-bootstrap-range-slider": "^2.0.2",
+    "react-dates": "^21.8.0",
+    "react-dom": "^16.14.0",
     "react-hook-form": "^6.9.3",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.3.1",
     "react-select": "^3.1.0",
+    "react-with-direction": "^1.3.1",
     "rimble-ui": "^0.14.0",
     "styled-components": "^5.2.0",
     "web3modal": "^1.5.0"
