remove unused packages

--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -43,6 +43,9 @@
     "bootstrap": "^4.5.3",
     "burner-provider": "^1.0.38",
     "dotenv": "^8.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
     "eth-hooks": "^1.1.2",
     "graphql": "^14.6.0",
     "moment": "^2.29.1",
