--- a/.github/workflows/surge.yml
+++ b/.github/workflows/surge.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   publish:
-    name: Deploy to sruge
+    name: Deploy to surge
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
@@ -14,7 +14,7 @@ jobs:
       - name: Install dependencies
         uses: actions/setup-node@v1
         with:
-          node-version: '12'
+          node-version: '10'
       - run: cd packages/react-app && yarn && cd ../..
 
       - name: Build project
