--- a/package.json
+++ b/package.json
@@ -46,9 +46,6 @@
   },
   "dependencies": {
     "3box": "^1.22.2",
-    "contract-proxy-kit": "^2.2.0-alpha.1",
-    "express": "^4.17.1",
-    "openlaw": "^0.2.46",
-    "semantic-ui-react": "^2.0.0"
+    "contract-proxy-kit": "^2.2.0-alpha.1"
   }
 }
