--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -19,12 +19,12 @@
     "@apollo/client": "^3.2.4",
     "@apollo/react-hooks": "^3.1.3",
     "@babel/runtime": "^7.12.1",
-    "@ethersproject/address": "^5.0.2",
-    "@ethersproject/bignumber": "^5.0.5",
-    "@ethersproject/bytes": "^5.0.3",
-    "@ethersproject/contracts": "^5.0.2",
-    "@ethersproject/providers": "^5.0.5",
-    "@ethersproject/units": "^5.0.2",
+    "@ethersproject/address": "^5.0.7",
+    "@ethersproject/bignumber": "^5.0.10",
+    "@ethersproject/bytes": "^5.0.6",
+    "@ethersproject/contracts": "^5.0.7",
+    "@ethersproject/providers": "^5.0.15",
+    "@ethersproject/units": "^5.0.7",
     "@ramp-network/ramp-instant-sdk": "^1.8.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -85,7 +85,7 @@
     "extends": "react-app"
   },
   "scripts": {
-    "build": "react-scripts build --max-old-space-size=8192",
+    "build": "react-scripts build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
     "test": "react-scripts test",
